--- a/src/pages/blog/blog.pug
+++ b/src/pages/blog/blog.pug
@@ -18,6 +18,7 @@ block main
     section.blog.container
         .blog__posts
             +post()(
+                data-url="/single-post.html"
                 data-img="/img/blog-3.jpg",
                 data-header="Red selfies edison bulb four dollar toast humblebrag for the furniture",
                 data-date="August 15, 2020",
