--- a/src/components/aside-blog/aside-blog.scss
+++ b/src/components/aside-blog/aside-blog.scss
@@ -1,11 +1,10 @@
 .aside-blog {
-  
     &__search-form {
         display: flex;
         position: relative;
         margin-bottom: 44px;
-        @media (max-width:1200px) {
-            width:100%;           
+        @media (max-width: 1200px) {
+            width: 100%;
         }
     }
     &__search-input {
@@ -15,7 +14,8 @@
         padding: 6px 40px 6px 18px;
         border-radius: 20px;
         color: $h-color;
-        &::placeholder {}
+        &::placeholder {
+        }
     }
     &__search-submit {
         position: absolute;
@@ -42,46 +42,47 @@
         &--posts {
             margin-bottom: 24px;
         }
-        @media (max-width:1200px) {
+        @media (max-width: 1200px) {
             &--category {
                 margin-bottom: 5px;
             }
             &--posts {
                 margin-bottom: 5px;
-            }          
+            }
         }
+    }
+    &__category-container {
+        overflow: hidden;
     }
     &__categories-list {
         display: flex;
-        flex-wrap: wrap;
-        
+        flex-direction: column;
+        margin-top: -6px;
+        margin-bottom: -6px;
+        @media (max-width:1200px) {
+            flex-wrap: wrap;
+            flex-direction: row;
+        }
     }
     &__categories-item {
         font: $text-font;
         color: $text-color;
-        &+& {
-            margin-top: 11px;
-            @media (max-width:1200px) {
-                margin-top: 0;                
-            }
+        margin-top: 6px;
+        margin-bottom: 6px;
+        @media (max-width: 1200px) {
+            margin: 5px;
         }
-        @media (max-width:1200px) {
-            margin-right: 20px;
-            &:last-child{
-                margin-right: 0;
-            }            
-        }
-
     }
-    &__categories-link {}
-    &__recent-posts{
+    &__categories-link {
+    }
+    &__recent-posts {
         margin-bottom: 47px;
     }
     &__recent-posts-list {
         margin-bottom: 50px;
-        @media (max-width:1200px) {
-            margin-bottom: 0;            
-            &+&{
+        @media (max-width: 1200px) {
+            margin-bottom: 0;
+            & + & {
                 margin-left: 20px;
             }
         }
@@ -98,7 +99,7 @@
     &__tag-link {
         font: $text-font;
         font-weight: 600;
-        color: #8F8D8D;
+        color: #8f8d8d;
         padding: 5px 16px;
         opacity: 0.5;
         border: 1px solid #454647;
@@ -106,17 +107,16 @@
     }
     &__social-links {
         display: flex;
-        
-        @media (max-width:1200px) {
-           margin: 0 auto;
-           margin-bottom: 50px;
+
+        @media (max-width: 1200px) {
+            margin: 0 auto;
+            margin-bottom: 50px;
         }
     }
     &__social-item {
         font-size: 0px;
-        &+& {
+        & + & {
             margin-left: 20px;
         }
-       
     }
 }
