--- a/src/pages/contact/contact.scss
+++ b/src/pages/contact/contact.scss
@@ -1,6 +1,9 @@
 @import "../../components/layout/layout.scss";
 @import "../../components/breadcrumbs/breadcrumbs.scss";
 @import "../../components/social-links/social-links.scss";
+@import "../../components/social-links/social-links.scss";
+@import "../../components/form/form.scss";
+
 .contact {
     &__map {
         margin-top: -56px;
@@ -83,63 +86,7 @@
         background-size: 16px;
         margin-bottom: 25px;
     }
-    &__form {
-        display: flex;
-        flex-wrap: wrap;
-        @media (max-width: 575px) {
-            flex-direction: column;
-            flex-wrap: nowrap;
-        }
-    }
-    &__input {
-        padding: 6px 16px;
-        border: 1px solid #dfdfdf;
-        border-radius: 20px;
-        flex-grow: 1;
-        &::placeholder {
-            font: $text-font;
-            line-height: 28px;
-            color: #a1a1a1;
-        }
-        & + & {
-            margin-left: 11px;
-        }
-        @media (max-width: 575px) {
-            & + & {
-                margin-left: 0px;
-                margin-top: 10px;
-            }
-            width: 100%;
-        }
-    }
-    &__message {
-        padding: 14px 16px;
-        border: 1px solid #dfdfdf;
-        border-radius: 24px;
-        margin-top: 15px;
-        margin-bottom: 20px;
-        width: 100%;
-        min-height: 125px;
-        resize: none;
-        &::placeholder {
-            font: $text-font;
-            line-height: 28px;
-            color: #a1a1a1;
-        }
-    }
-    &__submit {
-        padding: 6px 16px;
-        min-width: 180px;
-        background: #363838;
-        border-radius: 21px;
-        font: $text-font;
-        color: #fffff0;
-        border: none;
-        font-weight: 600;
-        @media (max-width: 575px) {
-            align-self: center;
-        }
-    }
+   
     &__slider {
         margin-bottom: 102px;
         @media (max-width: 768px) {
