--- a/src/pages/single-post/single-post.scss
+++ b/src/pages/single-post/single-post.scss
@@ -2,43 +2,35 @@
 @import "../../components/breadcrumbs/breadcrumbs.scss";
 @import "../../components/post/post.scss";
 @import "../../components/aside-blog/aside-blog.scss";
-@import "../../components/pagination/pagination.scss";
-.blog {
+@import "../../components/post-list/post-list.scss";
+@import "../../components/comments/comments.scss";
+.single-post {
     display: flex;
     justify-content: center;
+    margin-bottom: 120px;
+    margin-top: 60px;
     @media (max-width: 1200px) {
         flex-direction: column;
         align-items: center;
     }
-    &__posts {
-        order: 1;
+    &__inner{
         max-width: 730px;
-        margin-right: 15px;
-        &:first-child {
-            margin-bottom: 70px;
-            @media (max-width:768px) {
-                margin-bottom: 35px;        
-            }
-        }
-        &:nth-child(2) {
-            margin-bottom: 40px;
-            // @media (max-width:768px) {
-            //     margin-bottom: 20px;        
-            // }
-        }
-        @media (max-width: 1200px) {
-            flex-shrink: 1;
+        width: 100%;
+        order: 1;
+        flex-shrink: 1;
+        @media (max-width:1200px) {
             order: 2;
-            margin-right: 0px;
-        }
-        @media (max-width:768px) {
-            max-width: 100%;            
         }
     }
     &__post {
+        margin-right: 15px;
         margin-bottom: 80px;
-        @media (max-width:768px) {
+        @media (max-width: 1200px) {
+            margin-right: 0px;
             margin-bottom: 40px;
+        }
+        @media (max-width:768px) {
+            max-width: 100%;            
         }
         @media (max-width:575px) {
             margin-bottom: 20px;
@@ -62,9 +54,7 @@
         margin-bottom: 20px;
     }
     &__aside-category{
-        @media (max-width:1200px) {
-            margin-bottom: 20px;
-        }
+        margin-bottom: 20px;
     }
     &__aside-posts{
         margin-bottom: 20px;
@@ -75,8 +65,7 @@
     &__blockquote {
         margin: 0;
         display: block;
-        padding: 55px;
-        background: rgba(223, 223, 223, 0.5);
+        padding: 40px;
         @media (max-width:768px) {
             padding: 15px;            
         }
@@ -87,7 +76,7 @@
         font-style: italic;
         font-size: $h4-size;
         line-height: $h4-line-height;
-        text-align: center;
+        text-align: left;
         position: relative;
         padding-bottom: 25px;
         margin-bottom: 25px;
@@ -95,10 +84,9 @@
             content: "";
             position: absolute;
             bottom: 0px;
-            width: 200px;
+            width: 170px;
             height: 1px;
-            left: 50%;
-            transform: translateX(-50%);
+            left: 0;
             background-color: #6d7278;
         }
         @media (max-width:768px) {
@@ -107,43 +95,21 @@
             font-size: $h5-size;
             line-height: $h5-line-height;            
         }
-        // @media (max-width:575px) {
-        //     font-size: $h5-size;
-        //     line-height: 1.3;         
-        // }
+    
     }
     &__blockquote-author {
         display: block;
         font: $h-font;
         font-size: $h5-size;
         line-height: $h5-line-height;
-        text-align: center;
+        text-align: left;
         @media (max-width:768px) {
             font-size: $h5-size;
             line-height: $h5-line-height;            
         }
     }
-    &__slider {
-        position: relative;
-        margin-bottom: 50px;
+    &__post-list{
     }
-    &__video {
-    }
-
-    &__pagination {
-        display: flex;
-        justify-content: center;
-    }
-
-    // &__aside-form{
-    //     @media (max-width:1200px) {
-    //         width: 100%;
-    //     }
-    // }
-    // &__aside-category-list{
-    //     @media (max-width:1200px) {
-    //         display: flex;
-
-    //     }
-    // }
+  
+   
 }
