--- a/src/styles/_variable.scss
+++ b/src/styles/_variable.scss
@@ -12,8 +12,17 @@ $h3-size:36px;
 $h3-line-height:51px;
 $h4-size:24px;
 $h4-line-height:38px;
+
+$h4-size-single:28px;
+$h4-line-height-single:40px;
+
 $h5-size:16px;
 $h5-line-height:23px;
 $h-color:#363838;
-$h-font:700 16px/23px 'Montserrat',
-sans-serif
+$h-font:700 16px/23px 'Montserrat', sans-serif;
+$small-text-size:14px;
+$small-text-line-height:28px;
+$small-text-color:#A1A1A1;
+$border-color:#DFDFDF;
+$button-clor:#fffff0;
+
